--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardSteps.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardSteps.html
@@ -20,7 +20,11 @@
     <div wicket:id="helpModal" />
 
     <div class="wizard">
-        <a wicket:id="link"><span wicket:id="label"/></a>
+        <span wicket:id="linkRepeater">
+            <a wicket:id="link">
+                <span wicket:id="label"/>
+            </a>
+        </span>
         <button wicket:id="help" style="float: right" class="btn btn-sm btn-primary"><span style="font-size: 1.5em" class="glyphicon glyphicon-question-sign"></span></button>
     </div>
 </wicket:panel>
