--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/multivalue/MultiValueTextEditPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/multivalue/MultiValueTextEditPanel.html
@@ -16,6 +16,14 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <wicket:panel>
+
+        <dd wicket:id="placeholderContainer" class="cap-dl-multivalue">
+            <a wicket:id="placeholderAdd" class="btn btn-sm btn-success" title="Add">
+                <i class="fa fa-plus"/>
+            </a>
+        </dd>
+
+        <!-- Repeater container -->
         <wicket:container wicket:id="repeater">
             <dd class="cap-dl-multivalue">
                 <div class="input-group">
