fix for resource wizard - handling outbounds/inbounds in attribute, association and credentials editor.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.html
@@ -17,7 +17,8 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <div wicket:id="limitationsEditor" />
-    <div wicket:id="mappingEditor" />
+    <div wicket:id="inboundEditor" />
+    <div wicket:id="outboundEditor" />
 
     <h3><span wicket:id="label"></span></h3>
 
