--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceCredentialsEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceCredentialsEditor.html
@@ -17,7 +17,8 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="mappingEditor" />
+    <div wicket:id="inboundEditor" />
+    <div wicket:id="outboundEditor" />
 
     <h3><wicket:message key="ResourceCredentialsEditor.label" /></h3>
 
