--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -43,7 +43,20 @@
         </div>
         <div class="col-md-8">
             <form class="clearfix form-horizontal" wicket:id="form">
-                <div wicket:id="table"/>
+                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                    <wicket:message key="TreeTablePanel.childOrg"/>
+                </div>
+                <div wicket:id="childUnitTable"/>
+
+                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                    <wicket:message key="TreeTablePanel.managers"/>
+                </div>
+                <div wicket:id="managerTable"/>
+
+                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                    <wicket:message key="TreeTablePanel.members"/>
+                </div>
+                <div wicket:id="memberTable"/>
             </form>
         </div>
     </div>
