"Reconcile affected objects" option implemented for roles

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.html
@@ -29,6 +29,10 @@
                 <input type="checkbox" wicket:id="reconcile">
                 <wicket:message key="ExecuteChangeOptionsPanel.label.reconcile"/>
             </label>
+            <label class="col-lg-3 checkbox-inline" wicket:id="reconcileAffectedLabel">
+                <input type="checkbox" wicket:id="reconcileAffected">
+                <wicket:message key="ExecuteChangeOptionsPanel.label.reconcileAffected"/>
+            </label>
             <label class="col-lg-3 checkbox-inline">
                 <input type="checkbox" wicket:id="executeAfterAllApprovals">
                 <wicket:message key="ExecuteChangeOptionsPanel.label.executeAfterAllApprovals"/>
