TreeTabel panel improvements - adding inline menus, improving queries etc.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -30,7 +30,7 @@
         <div class="col-md-4">
             <div wicket:id="treeHeader" class="row" style="margin: 0; border-bottom: 1px solid #ddd;">
                 <div class="col-xs-9" style="padding-left: 5px;">
-                    <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                    <div class="tree-table-header">
                         <wicket:message key="TreeTablePanel.hierarchy"/>
                     </div>
                 </div>
@@ -43,17 +43,17 @@
         </div>
         <div class="col-md-8">
             <form class="clearfix form-horizontal" wicket:id="form">
-                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                <div class="tree-table-header">
                     <wicket:message key="TreeTablePanel.childOrg"/>
                 </div>
                 <div wicket:id="childUnitTable"/>
 
-                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                <div class="tree-table-header">
                     <wicket:message key="TreeTablePanel.managers"/>
                 </div>
                 <div wicket:id="managerTable"/>
 
-                <div style="margin: 3px; margin-top: 10px; font-weight: bold;">
+                <div class="tree-table-header">
                     <wicket:message key="TreeTablePanel.members"/>
                 </div>
                 <div wicket:id="memberTable"/>
