--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -217,3 +217,8 @@ div.multivalue-form {
     max-width: 400px;
     word-break: break-word;
 }
+
+div.tree-table-header {
+    margin: 10px 3px 3px;
+    font-weight: bold;
+}
