MID-2160 improvement - explicit check, if inbound mapping has a target.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.html
@@ -66,6 +66,7 @@
             </div>
 
             <div class="form-group" wicket:id="target" />
+            <span class="text-danger" wicket:id="feedback"/>
 
             <div class="form-group" wicket:id="expressionType" />
             <div class="form-group" wicket:id="expressionLanguage" />
