MID-2212 fix - relation can be set in assignment only during assignment creation, not during assignment edit.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
@@ -54,6 +54,7 @@
                         <div class="row">
                             <div class="col-xs-9">
                                 <div wicket:id="relation" />
+                                <span wicket:id="relationLabel" />
                             </div>
                         </div>
                     </div>
