--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
@@ -35,6 +35,7 @@
                 <div class="form-group">
                     <label class="col-lg-4 control-label">
                         <wicket:message key="SystemConfigPanel.title.userTemplate"/>
+                        <i wicket:id="userTemplateDeprecatedWarning" wicket:message="title:SystemConfigPanel.deprecated.objectPolicy"/>
                     </label>
                     <div wicket:id="userTemplateChooser" />
                 </div>
