Adding footer to midpoint.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -17,6 +17,29 @@
 @import "operation-result.less";
 
 /**
+ *  Overall styles for correct footer behaviour
+ */
+ html {
+    height: 100%;
+ }
+
+ body{
+    min-height:100%;
+    position:relative;
+ }
+
+ div.mp-main-container{
+    height:100%;
+ }
+
+ div.mp-footer{
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+ }
+
+/**
  *  Auto-complete drop-down choice styles
  */
 div.wicket-aa {
