--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -30,6 +30,7 @@
 
  div.mp-main-container{
     height:100%;
+    padding-bottom: 40px;
  }
 
  div.mp-footer{
@@ -37,6 +38,9 @@
     bottom: 0;
     text-align: center;
     width: 100%;
+    height: 40px;
+    margin-bottom: 0.3em;
+    margin-top: 0.3em;
  }
 
 /**
