Improving assignable popups + fixing searches + styles

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignableOrgPopupContent.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignableOrgPopupContent.html
@@ -19,10 +19,8 @@
 <wicket:panel>
     <div class="popupWindow">
 
-       
-
         <div class="clearfix">
-            <div wicket:id="tabs"/>
+            <div wicket:id="tabs" class="tabbable" style="padding-top: 10px"/>
         </div>
 
         <p align="center">
