--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignableRolePopupContent.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AssignableRolePopupContent.html
@@ -20,12 +20,14 @@
     <div class="popupWindow">
 
         <div class="clearfix">
-            <form wicket:id="searchForm" class="form-inline pull-right"
-                  style="padding: 5px;">
-
+            <form class="form-inline pull-left" style="padding: 5px;">
                 <div class="form-group">
                     <select class="form-control input-sm" wicket:id="typeSelect" />
                 </div>
+            </form>
+
+            <form wicket:id="searchForm" class="form-inline pull-right"
+                  style="padding: 5px;">
 
                 <div wicket:id="basicSearch" />
             </form>
